--- a/app/views/webbooks/edit.html.haml
+++ b/app/views/webbooks/edit.html.haml
@@ -22,4 +22,4 @@
   .form-group
     = f.label :image
     = f.file_field :image, class: 'form-control'
-  = f.submit nil, class: 'btn btn-primary'
+  = f.submit '更新', class: 'btn btn-primary'
