--- a/app/views/webbooks/new.html.haml
+++ b/app/views/webbooks/new.html.haml
@@ -22,4 +22,4 @@
   .form-group
     = f.label :image
     = f.file_field :image, class: 'form-control'
-  = f.submit 作成, class: 'btn btn-primary'
+  = f.submit "作成する", class: 'btn btn-primary'
