--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -10,4 +10,4 @@
   .form-group
     = f.label :password_confirmation
     = f.text_field :password_confirmation
-  = f.submit "作成する", class: 'btn btn-primary'
+  = f.submit "作成", class: 'btn btn-primary'
