--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,6 +1,6 @@
 %h1 ユーザー登録
 
-= form_with model: @user, local: true do |f|
+= form_with model: @user, url: signup_path, local: true do |f|
   .form-group
     = f.label :email
     = f.text_field :email, class: 'form-control'
