--- a/app/views/users/session/new.html.haml
+++ b/app/views/users/session/new.html.haml
@@ -8,3 +8,5 @@
     = f.label :password
     = f.text_field :password
   = f.submit "ログインする", class: 'btn btn-primary'
+
+= link_to '新規登録はこちら', signup_path, class: 'nav-link'
