--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -13,3 +13,9 @@
             %h4= "#{cart_webbook.webbook.price}円"
             // カート機能を作成後、リンクを追加する
             = link_to '削除', delete_webbook_path(webbook_id: cart_webbook.webbook.id), method: :delete, class: "btn btn-xs btn-danger", data: {confirm: 'カートから削除してよろしいですか？'}
+            = form_tag charges_path(cart_webbook.webbook) do
+              %article
+                - if flash[:error].present?
+                  #error_explanation
+                    %p= flash[:error]
+              %script.stripe-button{"data-amount" => "#{cart_webbook.webbook.price}", "data-currency" => "JPY", "data-description" => "クレジット決済", "data-label"=>"購入する","data-name" => "#{cart_webbook.webbook.title}を購入","data-email"=>"#{current_user.email}","data-key" => "#{Rails.configuration.stripe[:publishable_key]}", "data-locale" => "ja", :src => "https://checkout.stripe.com/checkout.js"}
