フラッシュメッセージが表示されるようにした

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,4 +17,7 @@
         - else
           %li.nav-item= link_to 'ログイン', users_login_path, class: 'nav-link'
     .container
+      - if flash.notice.present?
+        .alert.alert-success
+          = flash.notice
       = yield
