--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,9 +13,9 @@
 
       %ul.navbar-nav.ml-auto
         - if current_user
-          %li.nav-item=link_to 'ログアウト', users_logout_path, method: :delete, class: 'nav-link'
+          -# %li.nav-item=link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link'
         - else
-          %li.nav-item= link_to 'ログイン', users_login_path, class: 'nav-link'
+          -# %li.nav-item= link_to 'ログイン', login_path, class: 'nav-link'
     .container
       - if flash.notice.present?
         .alert.alert-success
