--- a/app/views/webbooks/new.html.haml
+++ b/app/views/webbooks/new.html.haml
@@ -6,7 +6,7 @@
     = f.text_field :title, class: 'form-control'
   .form-group
     = f.label :description
-    = f.text_area :description
+    = f.text_area :description, rows: 5, class: 'form-control'
   .form-group
     = f.label :author
     = f.text_field :author, class: 'form-control'
