--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -3,6 +3,6 @@
 .card.mb-3
   .card-body
     %h1= @page.title
-    %p= @page.content
+    %p= markdown(@page.content)
 // ユーザー画面からは見えないようにする
 -# = link_to '編集', edit_page_path, class: 'btn btn-primary mr-3'
