Webbookの閲覧機能の完成

--- a/app/views/pages/_sidebar.html.haml
+++ b/app/views/pages/_sidebar.html.haml
@@ -1,8 +1,6 @@
 %h3 ページ一覧
-- @pages.each do |page|
+- @webbook.pages.each do |page|
   %ul
-    %li= link_to "#{page.title}", webbook_page_path(1, page)
-    -# %li= link_to 'fuga', '#'
-    -# %li= link_to 'piyo', '#'
+    %li= link_to "#{page.title}", webbook_page_path(@webbook, page)
 
 
