--- a/app/views/mypages/show.html.haml
+++ b/app/views/mypages/show.html.haml
@@ -1,2 +1,21 @@
-%h1= current_user.email
+%h2 Top Page
 
+.card-group
+  -@webbooks.each do |webbook|
+    .col-md-4{style: "margin-bottom: 30px"}
+      .card
+        .row.no-gutters
+          .col-md-6
+            .bd-placeholder-img
+              = image_tag webbook.image.variant(resize_to_fit: [160, 160]) if webbook.image.attached?
+          .col-md-6
+            .card-body
+              .card-title
+                // TODO: このリンクを張り替える
+                %h5= link_to webbook.title, webbook_path(webbook)
+              .card-text
+                %p= webbook.author
+              .card-text
+                %p= "#{webbook.release_date}発売"
+              .card-text
+                %h5= "#{webbook.price}円"
