ログイン時のトップページとマイページの導線を確保

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,8 @@
 
       %ul.navbar-nav.ml-auto
         - if current_user
+          %li.nav-item=link_to 'Top', root_path, class: 'nav-link'
+          %li.nav-item=link_to 'MyPage', mypage_path, class: 'nav-link'          
           %li.nav-item=link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link'
         - else
           %li.nav-item= link_to 'ログイン', login_path, class: 'nav-link'
