管理者画面のトップからwebbookの新規投稿画面に遷移できるようにした

--- a/app/views/admin/webbooks/index.html.haml
+++ b/app/views/admin/webbooks/index.html.haml
@@ -18,3 +18,4 @@
                 %p= "#{webbook.release_date}発売"
               .card-text
                 %h5= "#{webbook.price}円"
+= link_to '新しい本を追加する', new_admin_webbook_path, class: 'btn btn-primary mr-3'
