--- a/app/views/admin/webbooks/show.html.haml
+++ b/app/views/admin/webbooks/show.html.haml
@@ -20,4 +20,5 @@
       %h5= "目次"
 // ユーザー画面からは見えないようにする
 = link_to '編集', edit_admin_webbook_path, class: 'btn btn-primary mr-3'
-  
+= link_to 'ページを作成する', new_admin_webbook_page_path(params[:id])
+= link_to 'この本を読む', admin_webbook_page_path(params[:id])
