--- a/app/views/admin/pages/show.html.haml
+++ b/app/views/admin/pages/show.html.haml
@@ -9,4 +9,5 @@
         %h1= @page.title
         %p= markdown(@page.content)
     // ユーザー画面からは見えないようにする
-    -# = link_to '編集', edit_page_path, class: 'btn btn-primary mr-3'
+    = link_to '編集', edit_admin_webbook_page_path, class: 'btn btn-primary mr-3'
+    = link_to '削除', admin_webbook_page_path, method: :delete, data: {confirm: "タスク「#{@page.title}」を削除します。よろしいですか？"}, class: 'btn btn-danger'
