発売前の商品を購入できないようにした

--- a/app/views/admin/webbooks/new.html.haml
+++ b/app/views/admin/webbooks/new.html.haml
@@ -15,7 +15,7 @@
     = f.text_field :price, class: 'form-control'
   .form-group
     = f.label :release_date
-    = f.date_select :release_date, class: 'form-control'
+    = f.date_field :release_date, class: 'form-control'
   .form-group
     = f.label :release
     = f.radio_button :release, class: 'form-control'
