--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -11,8 +11,7 @@
             %h2= cart_webbook.webbook.title
             %p= cart_webbook.webbook.author
             %h4= "#{cart_webbook.webbook.price}円"
-            // カート機能を作成後、リンクを追加する
-            = link_to '削除', delete_webbook_path(webbook_id: cart_webbook.webbook.id), method: :delete, class: "btn btn-xs btn-danger", data: {confirm: 'カートから削除してよろしいですか？'}
+            = link_to '削除', add_webbook_request_path(webbook_id: cart_webbook.webbook.id), method: :delete, class: "btn btn-xs btn-danger", data: {confirm: 'カートから削除してよろしいですか？'}
             = form_tag charges_path(cart_webbook.webbook) do
               %article
                 - if flash[:error].present?
