--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,6 +2,9 @@
 
 = form_with model: @user, url: signup_path, local: true do |f|
   .form-group
+    = f.label :name
+    = f.text_field :name, class: 'form-control'
+  .form-group
     = f.label :email
     = f.text_field :email, class: 'form-control'
   .form-group
