--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -3,8 +3,4 @@
     = render 'pages/sidebar'
   
   .col-10
-    %h2 Webブックの詳細ページ
-    .card.mb-3
-      .card-body
-        %h1= @page.title
-        %p= markdown(@page.content)
+    = render 'pages/content'
