--- a/app/views/admin/webbooks/edit.html.haml
+++ b/app/views/admin/webbooks/edit.html.haml
@@ -1,25 +1,3 @@
 %h1 WEBブック編集画面
 
-= form_with model: @webbook, url: admin_webbook_path, local: true do |f|
-  .form-group
-    = f.label :title
-    = f.text_field :title, class: 'form-control'
-  .form-group
-    = f.label :description
-    = f.text_area :description, rows: 5, class: 'form-control'
-  .form-group
-    = f.label :author
-    = f.text_field :author, class: 'form-control'
-  .form-group
-    = f.label :price
-    = f.text_field :price, class: 'form-control'
-  .form-group
-    = f.label :release_date
-    = f.date_select :release_date, class: 'form-control'
-  .form-group
-    = f.label :release
-    = f.radio_button :release, class: 'form-control'
-  .form-group
-    = f.label :image
-    = f.file_field :image, class: 'form-control'
-  = f.submit '更新', class: 'btn btn-primary'
+= render partial: 'form', locals: { model: @webbook, url: admin_webbook_path }
