管理者とユーザーで重複していたWebbook#ShowをDRYにした

--- a/app/views/webbooks/show.html.haml
+++ b/app/views/webbooks/show.html.haml
@@ -1,20 +1,6 @@
 %h2 Webブックの詳細ページ
 
-.card.mb-3
-  .row.no-gutters
-    .col-md-6
-      .bd-placeholder-img{style: "margin-bottom: 30px"}
-        = image_tag @webbook.image.variant(resize_to_fit: [500, 500]) if @webbook.image.attached?
-    .col-md-6
-      .card-body
-        %h2= @webbook.title
-        %p= @webbook.author
-        %p= "#{@webbook.release_date}発売"
-        %h4= "#{@webbook.price}円"
-        = button_to 'カートに入れる', add_webbook_requests_path(webbook_id: @webbook.id), method: :post, class: 'btn btn-primary mr-3'
-    .card-body
-      %h5= "説明"
-      %p= @webbook.description
-    .card-body
-      %h5= "目次"
+= render partial: 'content'
+
+= button_to 'カートに入れる', add_webbook_requests_path(webbook_id: @webbook.id), method: :post, class: 'btn btn-primary mr-3'
   
