--- a/app/views/admin/webbooks/show.html.haml
+++ b/app/views/admin/webbooks/show.html.haml
@@ -1,21 +1,6 @@
 %h2 管理者用Webブックの詳細ページ
+= render partial: 'webbooks/content'
 
-.card.mb-3
-  .row.no-gutters
-    .col-md-6
-      .bd-placeholder-img{style: "margin-bottom: 30px"}
-        = image_tag @webbook.image.variant(resize_to_fit: [500, 500]) if @webbook.image.attached?
-    .col-md-6
-      .card-body
-        %h2= @webbook.title
-        %p= @webbook.author
-        %p= "#{@webbook.release_date}発売"
-        %h4= "#{@webbook.price}円"
-    .card-body
-      %h5= "説明"
-      %p= @webbook.description
-    .card-body
-      %h5= "目次"
 = link_to '編集', edit_admin_webbook_path, class: 'btn btn-primary mr-3'
 = link_to '削除', admin_webbook_path, method: :delete, data: {confirm: "タスク「#{@webbook.title}」を削除します。よろしいですか？"}, class: 'btn btn-danger'
 = link_to 'ページを作成する', new_admin_webbook_page_path(params[:id])
