--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -3,6 +3,21 @@
     = f.label :title
     = f.text_field :title, class: 'form-control'
   .form-group
-    = f.label :content
-    = f.text_area :content, rows: 5, class: 'form-control'
+    #editor
+      = f.label :content
+      = f.text_area :content, rows: 5, class: 'form-control', :"v-model" => 'input'
+      %div.card-body{:"v-html" => 'input | marked'}
   = f.submit "送信", class: 'btn btn-primary'
+
+:javascript
+  window.onload = function() {
+    new Vue({
+      el: '#editor',
+      data: {
+        input: '',
+      },
+      filters: {
+        marked: marked,
+      },
+    });
+  };
