--- a/app/views/admin/pages/_sidebar.html.haml
+++ b/app/views/admin/pages/_sidebar.html.haml
@@ -1,4 +1,4 @@
 %h3 管理ページ一覧
-- @webbook.pages.each do |page|
+- @webbook.pages.order(:row_order).each do |page|
   %ul
     %li= link_to "#{page.title}", admin_webbook_page_path(@webbook, page)
