不適切な文言の修正

--- a/app/views/admin/pages/show.html.haml
+++ b/app/views/admin/pages/show.html.haml
@@ -6,4 +6,4 @@
     = render 'pages/content'
 
     = link_to '編集', edit_admin_webbook_page_path, class: 'btn btn-primary mr-3'
-    = link_to '削除', admin_webbook_page_path, method: :delete, data: {confirm: "タスク「#{@page.title}」を削除します。よろしいですか？"}, class: 'btn btn-danger'
+    = link_to '削除', admin_webbook_page_path, method: :delete, data: {confirm: "「#{@page.title}」を削除します。よろしいですか？"}, class: 'btn btn-danger'
