--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -1,10 +1,10 @@
 = form_with model: model, url: url, local: true do |f|
   .form-group
-    = f.label :title
+    = f.label :title, 'タイトル'
     = f.text_field :title, class: 'form-control'
   .form-group
     #editor
-      = f.label :content
+      = f.label :content, 'コンテンツ'
       = f.text_area :content, rows: 5, class: 'form-control', :"v-model" => 'input'
       %div.card-body{:"v-html" => 'input | marked'}
   = f.submit "送信", class: 'btn btn-primary'
