--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,15 +2,15 @@
 
 = form_with model: @user, url: signup_path, local: true do |f|
   .form-group
-    = f.label :name
+    = f.label :name, '名前'
     = f.text_field :name, class: 'form-control'
   .form-group
-    = f.label :email
-    = f.text_field :email, class: 'form-control'
+    = f.label :email, 'メールアドレス'
+    = f.password_field :email, class: 'form-control'
   .form-group
-    = f.label :password
-    = f.text_field :password
+    = f.label :password, 'パスワード'
+    = f.password_field :password, class: 'form-control'
   .form-group
-    = f.label :password_confirmation
-    = f.text_field :password_confirmation
+    = f.label :password_confirmation, 'パスワードの確認'
+    = f.password_field :password_confirmation, class: 'form-control'
   = f.submit "作成", class: 'btn btn-primary'
