--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -6,7 +6,7 @@
     = f.text_field :name, class: 'form-control'
   .form-group
     = f.label :email, 'メールアドレス'
-    = f.password_field :email, class: 'form-control'
+    = f.text_field :email, class: 'form-control'
   .form-group
     = f.label :password, 'パスワード'
     = f.password_field :password, class: 'form-control'
